# model-based-eggroll

./: .gitignore  LICENSE  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  claude-code-review.yml  pyright.yml  pytest.yml
configs/: config.yaml
configs/algorithm/: eggroll.yaml  mobrac.yaml  mopo.yaml  morel.yaml
configs/dataset/: halfcheetah_expert.yaml  halfcheetah_medium.yaml  hopper_medium.yaml  hopper_medium_replay.yaml  hopper_simple.yaml  pen_cloned.yaml  walker2d_medium.yaml  walker2d_simple.yaml
configs/experiment/: halfcheetah_medium_eggroll.yaml  halfcheetah_medium_mopo.yaml
configs/networks/: mlp.yaml
configs/policy_optimizer/: eggroll.yaml  mobrac.yaml  mopo.yaml  morel.yaml
configs/sweep/: eggroll_wm_halfcheetah.yaml  eggroll_wm_halfcheetah_finetune.yaml  eggroll_wm_halfcheetah_random.yaml  eggroll_wm_halfcheetah_schedule.yaml  ensemble_mlp_backprop_halfcheetah_sgd_lr.yaml  mle_dynamicsnet_halfcheetah_sgd_lr.yaml  mopo_halfcheetah.yaml
configs/world_model/: bptt_trajectory.yaml  eggroll_ensemble.yaml  eggroll_trajectory.yaml  ensemble_mlp_backprop.yaml  ensemble_mlp_eggroll.yaml  mle.yaml  mle_dynamicsnet.yaml  unifloral_ensemble_mlp.yaml
scripts/: init_sweep.py  report_plots.py  report_plots.slurm  report_plots.yaml  run_eggroll_wm_finetune_sweep_eit.slurm  run_eggroll_wm_grid_eit.slurm  run_eggroll_wm_schedule_sweep_eit.slurm  run_eggroll_wm_sweep_eit.slurm  run_ensemble_mlp_backprop_sgd_lr_sweep_eit.slurm  run_mle_dynamicsnet_sgd_lr_sweep_eit.slurm  run_pipeline.slurm  run_pipeline_eit.slurm  run_repro_eit.slurm  run_sweep_eit.slurm  sweep.py  sweep_ensemble_mlp_backprop.py  sweep_mle_dynamicsnet.py  sweep_world_model.py  training_plots.py  training_plots.yaml
src/mbrl/: data.py  evaluation.py  logger.py  logging.py  main.py  networks.py  train.py  utils.py
src/mbrl/algorithms/: eggroll.py  mobrac.py
src/mbrl/eggroll/: __init__.py  networks.py  primitives.py  training.py
src/mbrl/experiments/: __init__.py  evaluate.py  policy.py  wm_eval.py  world_model.py
src/mbrl/optimisers/: eggroll.py
src/mbrl/policy_optimizers/: mopo.py  morel.py  sac_n.py
src/mbrl/world_models/: base.py  eggroll.py  (+7 more)
tests/: test_algorithms.py  test_data.py  test_eggroll.py  test_eggroll_convergence.py  test_eggroll_primitives.py  test_ensemble_mlp.py  test_evaluation.py  test_experiments.py  test_logger.py  test_mopo.py  test_morel.py  test_rollout_figures.py  test_sac_n.py  test_termination_fns.py  test_unifloral_ensemble_mlp.py  test_wm_eval.py  test_world_models.py
