[project]
name = "model-based-eggroll"
version = "0.1.0"
description = "Investigating EGGROLL as an optimiser for world model learning and policy training in offline RL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.9.1",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "minari[hdf5,hf]>=0.5.3",
    "gymnasium>=1.2.3",
    "gymnasium-robotics>=1.4.2",
    "wandb>=0.25.1",
    "optax>=0.2.8",
    "flax>=0.12.6",
    "distrax>=0.1.7",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
cuda = [
    "jax[cuda12]>=0.9.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mbrl"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["mbrl"]
known-third-party = ["wandb"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
